syntax = "proto3";
option go_package = ".;proto";

// 商品销售类型
enum EItemSalesType{
    IT_NORMAL = 0;
    IT_WHOLESALE = 1;
}

message GetItemsByLabelRequest {
    string Label = 1;
    string SortBy = 2;
    int64 Begin = 3;
    int64 End = 4;
}

message PagingShopGoodsResponse {
    int64 Total = 1;
    repeated SGoods Data = 2;
}

message PagingGoodsResponse {
    int64 Total = 1;
    repeated SUnifiedViewItem Data = 2;
}

// 获取商品请求
message GetItemsRequest {
    int64 CategoryId = 1;
    int64 Begin = 2;
    int64 End = 3;
    //　是否随机
    bool Random = 4;
    string Where = 5;
}

// 简单的商品信息
message SGoods {
    int64 ItemId = 1;
    int64 ProductId = 2;
    int64 VendorId = 3;
    int64 ShopId = 4;
    int32 CategoryId = 5;
    // 标题
    string Title = 6;
    string ShortTitle = 7;
    // 货号
    string GoodsNo = 8;
    string Image = 9;
    //定价
    double RetailPrice = 10;
    //销售价
    double Price = 11;
    // 促销价
    double PromPrice = 12;
    // 价格区间
    string PriceRange = 13;
    int64 GoodsId = 14;
    int64 SkuId = 15;
    bool IsPresent = 16;
    // 促销标志
    int32 PromotionFlag = 17;
    // 库存
    int32 StockNum = 18;
    // 已售件数
    int32 SaleNum = 19;
}

/** SKU */
message SSku {
    sint64 SkuId = 1;
    sint64 ItemId = 2;
    sint64 ProductId = 3;
    string Title = 4;
    string Image = 5;
    string SpecData = 6;
    string SpecWord = 7;
    string Code = 8;
    double RetailPrice = 9;
    double Price = 10;
    double Cost = 11;
    sint32 Weight = 12;
    sint32 Bulk = 13;
    sint32 Stock = 14;
    sint32 SaleNum = 15;
}

// 统一的商品显示对象
message SUnifiedViewItem {
    sint64 ItemId = 1;
    sint64 ProductId = 2;
    sint32 CategoryId = 3;
    sint64 VendorId = 4;
    sint32 BrandId = 5;
    string Title = 6;
    string Code = 7;
    int64 SkuId = 8;
    string Image = 9;
    double Price = 10;
    string PriceRange = 11;
    sint32 StockNum = 12;
    sint32 ShelveState = 13;
    sint32 ReviewState = 14;
    sint64 UpdateTime = 15;
    repeated SSku SkuArray = 16;
    repeated SLevelPrice LevelPrices = 17;
    SItemViewData ViewData = 18;
    map<string, string> Data = 19;
    // 3: sint32 PromFlag
    // 7: sint32 ShopId
    // 8: sint32 ShopCatId
    // 9: sint32 ExpressTid
    // 11: string ShortTitle
    // 14: sint32 IsPresent
    // 23: sint32 Weight
    // 24: sint32 Bulk
    // 18: sint32 SkuNum
    // 28: sint32 SortNum
    // 29: sint64 CreateTime
    // 31: double PromPrice
    // 22: double RetailPrice
    //
    // 20: double Cost
    // 17: sint32 SaleNum
}

message SItemViewData {
    // 商品详情
    string Details = 1;
    // 缩略图
    repeated string Thumbs = 2;
    // 产品图片
    repeated string Images = 3;
    // SKU选择HTML
    string SkuHtml = 4;
    // SKU JSON数据
    string SkuJson = 5;
}

// 完整的商品信息
message SOldItem {
    sint64 ItemId = 1;
    sint64 ProductId = 2;
    sint32 PromFlag = 3;
    sint32 CatId = 4;
    sint64 VendorId = 5;
    sint32 BrandId = 6;
    sint64 ShopId = 7;
    sint32 ShopCatId = 8;
    sint32 ExpressTid = 9;
    string Title = 10;
    string ShortTitle = 11;
    string Code = 12;
    string Image = 13;
    sint32 IsPresent = 14;
    string PriceRange = 15;
    sint32 StockNum = 16;
    sint32 SaleNum = 17;
    sint32 SkuNum = 18;
    sint64 SkuId = 19;
    double Cost = 20;
    double Price = 21;
    double RetailPrice = 22;
    sint32 Weight = 23;
    sint32 Bulk = 24;
    sint32 ShelveState = 25;
    sint32 ReviewState = 26;
    string ReviewRemark = 27;
    sint32 SortNum = 28;
    sint64 CreateTime = 29;
    sint64 UpdateTime = 30;
    double PromPrice = 31;
    repeated SSku SkuArray = 32;
    map<string, string> Data = 33;
}

message ItemLabelListResponse {
    repeated SItemLabel Value = 1;
}

// 销售标签
message SItemLabel {
    int32 Id = 1;
    // 标签名
    string Name = 2;
    // 标签代码
    string TagCode = 5;
    // 商品的遮盖图
    string LabelImage = 3;
    // 是否启用
    bool Enabled = 4;
}

//　商品库存数据
message SItemStock{
    // 库存数量
    int32 StockNum = 1;
    // 已销售数量
    int32 SaleNum = 19;
}

// 商品快照(针对商品)
message SItemSnapshot {
    // 商品编号
    int64 ItemId = 1;
    // 产品编号
    int64 ProductId = 2;
    // 快照编码
    string Key = 3;
    // 分类编号
    int32 CategoryId = 4;
    // 供货商编号
    int64 VendorId = 5;
    // 编号
    int64 BrandId = 6;
    // 店铺编号
    int64 ShopId = 7;
    // 编号分类编号
    int64 ShopCatId = 8;
    // 运费模板
    int64 ExpressTid = 9;
    // 商品标题
    string Title = 10;
    // 短标题
    string ShortTitle = 11;
    // 产品编码
    string ProductCode = 12;
    // 商品图片
    string MainImage = 13;
    // 是否为赠品
    bool IsPresent = 14;
    // 价格区间
    string PriceRange = 15;
    // 默认SKU
    int64 SkuId = 16;
    // 成本
    //Cost float32 `db:"cost"`
    // 售价
    int32 Price = 17;
    // 零售价
    int32 RetailPrice = 18;
    // 重量(g)
    //int32 Weight = 19;
    // 体积(ml)
    //Bulk int32 `db:"bulk"`
    // 会员价
    //LevelSales int32

    // 更新时间
    int64 UpdateTime = 19;
    // 库存
    SItemStock Stock = 20;
    // SKU
    repeated SSku SkuArray = 21;
    // 会员价
    repeated SLevelPrice LevelPrices = 22;
    //　显示数据
    SItemViewData ViewData = 23;
}

// 商品交易快照(针对商品)
message STradeSnapshot {
    //快照编号
    int64 Id   = 1;
    // 商品编号
    int64 ItemId = 2;
    //商品SKU编号
    int64 SkuId = 3;
    //快照编码: 商户编号+g商品编号+快照时间戳
    string SnapshotKey = 4;
    // 卖家编号
    int64 SellerId = 5;
    // 卖家名称
    string SellerName = 6;
    //商品标题
    string Title = 7;
    //货号
    // GoodsNo string `db:"goods_no"`
    // 产品编码
    string ProductCode = 8;
    //SKU
    string Sku  = 9;
    //图片
    string Image = 10;
    //销售价
    int32 Price = 11;
    // 快照时间
    int64 CreateTime =12;
}

//　会员价
message SLevelPrice{
    //　编号
    int64 Id = 1;
    //　等级
    int32 Level  = 2;
    //　价格
    int64 Price = 3;
    // 限购数量,-1为不限制
    int32 MaxNumber = 4;
    // 是否启用
    bool Enabled = 5;
}

message ItemBySkuRequest{
    int64 ProductId = 1;
    int64 SkuId = 2;
}

message ItemIllegalRequest{
    int64 ItemId = 1;
    string Remark = 2;
}

message ItemReviewRequest{
    int64 ItemId = 1;
    bool Pass =2;
    string Remark = 3;
}

message SaveLevelPriceRequest{
    int64 ItemId = 1;
    repeated SLevelPrice Value = 2;
}

message ShelveStateRequest {
    int64 SellerId = 1;
    EItemSalesType itemType = 3;
    int64 ItemId = 2;
    bool ShelveOn = 4;
    string Remark = 5;
}
